--- a/09-vars-inventory.yaml
+++ b/09-vars-inventory.yaml
@@ -3,4 +3,5 @@
   connection: local
   tasks:
   - name: print course information
-  msg: "Hello i am learning {{COURSE}}, duration {{DURATION}}, trainer {{TRAINER}}"
+    ansible.builtin.debug:
+      msg: "Hello i am learning {{COURSE}}, duration {{DURATION}}, trainer {{TRAINER}}"
