--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,6 @@
 [frontend]
-172.31.30.246
+172.31.30.246 COURSE=Ansible DURATION=5HRS TRAINER=Eswar ansible_user=ec2-user ansible_password=DevOps321
+172.31.29.18  COURSE=variables DURATION=1.5HRS TRAINER=Eswar ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.30.246
