--- a/11-vars-args.yaml
+++ b/11-vars-args.yaml
@@ -6,4 +6,4 @@
   - name: print course information
     ansible.builtin.debug:
         msg: "Hello i am learning {{COURSE}}, Duration: {{DURATION}} , Trainer is: {{TRAINER}}"
-        when: false
+  #      when: false
