--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -1,7 +1,14 @@
 - name: functions
   hosts: local
   connection: local
+  vars:
+    persons: "Ramesh,Suresh,Raheem,Joseph"
   tasks:
   - name: check undefined variables
     ansible.builtin.debug:
       msg: "Hello, {{ person | default('Eswar')}}"
+  
+  - name: print names
+    ansible.builtin.debug:
+      msg: "Hello {{ persons }}"
+  
