--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -12,3 +12,11 @@
     ansible.builtin.debug:
       msg: "Hello {{ persons | split(',')}}"
   
+  - name: convert map into list
+    vars:
+      course:
+        name: ansible
+        duration: 10HR
+        trainer: sivakumar
+      ansible.builtin.debug:
+        msg: "Course Info: {{ course |  dict2items}}"
