--- a/19-functions.yaml
+++ b/19-functions.yaml
@@ -4,14 +4,14 @@
   vars:
     persons: "Ramesh,Suresh,Raheem,Joseph"
   tasks:
-  - name: check undefined variables
+  - name: check undefined variable
     ansible.builtin.debug:
-      msg: "Hello, {{ person | default('Eswar')}}"
-  
+      msg: "Hello, {{ person | default('Ramesh') }}"
+
   - name: print names
     ansible.builtin.debug:
-      msg: "Hello {{ persons | split(',')}}"
-  
+      msg: "Hello {{ persons | split(',') }}"
+
   - name: convert map into list
     vars:
       course:
@@ -19,4 +19,31 @@
         duration: 10HR
         trainer: sivakumar
     ansible.builtin.debug:
-        msg: "Course Info: {{ course |  dict2items}}"
+      msg: "Course Info: {{ course | dict2items  }}"
+
+  - name: convert list into map
+    vars:
+      course:
+      - {'key': 'name', 'value': 'ansible'}
+      - {'key': 'duration', 'value': '10HR'}
+      - {'key': 'trainer', 'value': 'sivakumar'}
+    ansible.builtin.debug:
+      msg: "Course Info: {{ course | items2dict  }}"
+
+  - name: convert to uppercase
+    vars:
+      name: "Sivakumar Reddy M"
+    ansible.builtin.debug:
+      msg: "Hello {{ name | upper }}"
+
+  - name: convert to lowercase
+    vars:
+      name: "Sivakumar Reddy M"
+    ansible.builtin.debug:
+      msg: "Hello {{ name | lower }}"
+
+  - name: check IP address is valid or not
+    vars:
+      ip: "192.168.1.1"
+    ansible.builtin.debug:
+      msg: "{{ ip | ansible.utils.ipaddr }}"
