--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -2,8 +2,8 @@ plugin: amazon.aws.aws_ec2
 region:
 - us-east-1   # shows all the us east regions servers
 filters:
-  tag:Name: frontend
-  instance-state-name: running
+  "tag:Name": "frontend"
+  "instance-state-name": "running"
 hostnames:
   - ip-address
 compose:
