--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -2,7 +2,7 @@ plugin: amazon.aws.aws_ec2
 region:
 - us-east-1   # shows all the us east regions servers
 filters:
-  "tag:Name": "frontend"
+  "tag:Name": "frontned"
   "instance-state-name": "running"
 hostnames:
   - ip-address
