--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -5,6 +5,6 @@ filters:
   "tag:Name": "frontned"
   "instance-state-name": "running"
 hostnames:
-  - ip-address
+  - private-ip-address
 compose:
   ansible_host: private_ip_address
