--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -6,5 +6,9 @@ filters:
   "instance-state-name": "running"
 hostnames:
   - private-ip-address
+keyed_groups:
+- key: tags.Name
+  prefix: ""
+  seperator: ""
 compose:
   ansible_host: private_ip_address
