--- a/inventory.aws_ec2.yaml
+++ b/inventory.aws_ec2.yaml
@@ -1,14 +1,14 @@
 plugin: amazon.aws.aws_ec2
 region:
 - us-east-1   # shows all the us east regions servers
+keyed_groups:
+- key: tags.Name #dynamic-frontend
+  prefix: "dynamic"
+  seperator: "-"
 filters:
   "tag:Name": "frontned"
   "instance-state-name": "running"
 hostnames:
   - private-ip-address
-keyed_groups:
-- key: tags.Name
-  prefix: ""
-  seperator: ""
 compose:
   ansible_host: private_ip_address
